@@ -1,2 +1,1 @@
 <!-- Majordomo archive_text_foot format file -->
-</pre>
