@@ -2,4 +2,3 @@
 <p>
 [Volet $PART $CONTENT_TYPE $CHARSET ($SIZE kilo octets)]
 </p>
-<pre>
